<resources>
    <string name="app_name">在线考试系统</string>
    <string name="title_first">学习</string>
    <string name="title_second">论坛</string>
    <string name="title_third">我的</string>
    <string name="mine_rank">我的积分</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_blog">我的博客</string>
    <string name="mine_history">浏览历史</string>
    <string name="mine_juejin">掘金</string>
    <string name="mine_github">Github</string>
    <string name="mine_exit">退出登录</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="search_tips">请输入要搜索的内容...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_account">请输入账号</string>
    <string name="prompt_username">请输入用户名/昵称</string>
    <string name="prompt_password">请输入密码</string>
    <string name="welcome_register">欢迎来到在线考试系统，请先完成注册。</string>
    <string name="action_sign_in">点击登录</string>
    <string name="action_register">-> 注册账号</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>