<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_nav_rank"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/mine_rank"/>
        <item
            android:id="@+id/drawer_nav_collect"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/mine_collect"/>
        <item
            android:id="@+id/drawer_nav_blog"
            android:icon="@drawable/ic_account_blog_black_24dp"
            android:title="@string/mine_blog"/>
        <item
            android:id="@+id/drawer_nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/mine_history"/>
        <item
            android:id="@+id/drawer_nav_juejin"
            android:icon="@drawable/ic_bug_report_black_24dp"
            android:title="@string/mine_juejin"/>
        <item
            android:id="@+id/drawer_nav_github"
            android:icon="@drawable/ic_github_black_24dp"
            android:title="@string/mine_github"/>
        <item
            android:id="@+id/drawer_nav_exit"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/mine_exit"/>
    </group>
</menu>