<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <include layout="@layout/toolbar_layout"
        android:id="@+id/toolbar_register"/>

    <EditText
        android:id="@+id/tv_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_white_rect"
        android:hint="@string/prompt_account"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar_register"/>

    <EditText
        android:id="@+id/tv_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_white_rect"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_login_phone"/>

    <EditText
        android:id="@+id/tv_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_white_rect"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:selectAllOnFocus="true"
        android:layout_below="@id/tv_login_username"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_rect"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="点击注册"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_login_password"/>

</RelativeLayout>